added styling, functionality to change username, game activity and bot status

--- a/public/main/index.html
+++ b/public/main/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Discord Bot Tools</title>
+  <title>Discord Bot Tools by Saku#1193</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -25,8 +25,9 @@
     </div>
   </div>
   <div id="started">
-    <section class="hidden" id="serverSection">
-    </section>
+  </div>
+  <div class="creator">
+    <p>Made by <a href='https://github.com/drissbenadjal'>Saku#1193</a></p>
   </div>
   <script src="./js/index.js"></script>
 </body>
