Fix of open external link Github

--- a/public/main/index.html
+++ b/public/main/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,10 @@
   <title>Discord Bot Tools by Saku#1193</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <div class="github">
-    <a href="https://github.com/drissbenadjal" target="_blank">
+    <a id="githubLink" target="_blank">
       <img src="./images/github-logo.png" alt="Github of creator">
     </a>
   </div>
@@ -27,8 +29,9 @@
   <div id="started">
   </div>
   <div class="creator">
-    <p>Made by <a href='https://github.com/drissbenadjal'>Saku#1193</a></p>
+    <p>Made by <a id="githubLink">Saku#1193</a></p>
   </div>
   <script src="./js/index.js"></script>
 </body>
+
 </html>
