--- a/public/main/index.html
+++ b/public/main/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="github">
-    <a id="githubLink" target="_blank">
+    <a id="githubLink">
       <img src="./images/github-logo.png" alt="Github of creator">
     </a>
   </div>
